--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,28 @@
 {% extends 'layout.html'%}{% block title %}Log In{% endblock %}{% block body %}
-<h1>This is Login page</h1>
+<section class="login">
+  <div class="login-container">
+    <h1>Admin Log In</h1>
+
+    <form action="{{ url_for('subscribe') }}" method="post" class="login-form">
+      <input
+        autocomplete="off"
+        type="text"
+        placeholder="Username *"
+        name="username"
+        class="username"
+      />
+      <input
+        autocomplete="off"
+        type="password"
+        placeholder="Password *"
+        name="password"
+        class="password"
+      />
+      <div class="login-btn-block">
+        <button class="btn login-btn" type="submit">Login</button>
+        <div class="login-btn-bg"></div>
+      </div>
+    </form>
+  </div>
+</section>
 {% endblock %}
