--- a/templates/subscribed.html
+++ b/templates/subscribed.html
@@ -2,7 +2,7 @@
 %}
 <section class="subscribed">
   <div class="subscribed-container">
-    <h1>Thank You!</h1>
+    <h1>Thank You {{ firstname }}!</h1>
 
     <div class="thank-message">
       <h3>You have successfully subscribed</h3>
